# 42Work

./: README.md
Corewar/: CMakeLists.txt  Makefile  README.md  auteur  corewar  gandalfonfront.s
Corewar/LIBFT/: Makefile  changelog  ft_atoi.c  ft_atoi_base.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstmap.c  ft_memdel.c  ft_memmove.c  ft_print_words_tables.c  ft_put.c  ft_putendl.c  ft_putnbr.c  ft_putsterr.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strndup.c  ft_strnew.c  ft_strnstr.c  ft_strrev.c  ft_strsplit.c  ft_strsub.c  get_next_line.c  int_len.c  libft.h  malloc_tabtab.c
Corewar/LIBFT/ft_printf/: ft_create_params.c  ft_format.c  ft_is_c.c  ft_is_cap_s.c  ft_is_d.c  ft_is_o.c  ft_is_p.c  ft_is_s.c  ft_is_s_perc.c  ft_is_u.c  ft_is_x.c  ft_left_or_right.c  ft_override_length.c  ft_override_params.c  ft_precision.c  ft_prepend_or_append.c  ft_print_buffer.c  ft_printf.c  ft_printf.h  ft_prop_cast.c  ft_set_params.c  ft_unicode.c  ft_width.c  src_printf_a.c  src_printf_b.c  src_printf_c.c  src_printf_d.c
Corewar/SRCS_ASM/: check_code.c  check_code.d  check_filedots.c  check_filedots.d  check_head.c  check_head.d  check_ins.c  check_ins.d  check_ins2.c  check_ins2.d  errors.c  errors.d  ft_label.c  ft_label.d  ft_label2.c  ft_label2.d  ft_opdir.c  ft_opdir.d  ins.c  ins.d  ins2.c  ins2.d  ins3.c  ins4.c  ins5.c  ins6.c  ins7.c  ins8.c  main.c  utils.c  write.c
Corewar/SRCS_VM/: arena.c  arena.d  inner_parser.c  inner_parser.d  main.c  main.d  outer_parser.c  outer_parser.d  player_builder.c  player_builder.d  player_builder_set_number.c  player_builder_set_number.d  utils.c  utils.d  utils2.c  utils2.d
Corewar/arena/: arena.h  main.c
Corewar/includes/: arena.h  asm.h  corewar.h  op.h  vm.h
Corewar/includes/corewar/: arena.h  asm.h
Corewar/libft/: Makefile  ft_atoi.c  ft_atoi_long.c  ft_base_digitlen.c  ft_bzerocustom.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isint.c  ft_isnbr.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lst_push_back.c  ft_memalloc.c  ft_memchrint.c  ft_memcpy.c  ft_memdel.c  ft_nrealloc.c  ft_print_bit.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_str_isdigit.c  ft_strarraycmp.c  ft_strcat.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_striter.c  ft_strlen.c  ft_strncmp.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strtrim.c  ft_toupper.c  ft_uitoa.c
Corewar/libft/printf/: ft_check_specifier.c  ft_digit_len.c  ft_free_printf.c  ft_handle_str_width_pre.c  ft_printf.c  ft_set_param.c  ft_size_ln.c  ft_write_dec_flags.c  ft_write_letters.c  ft_write_numbers.c  ft_write_on_buff.c
Corewar/printf/srcs/: ft_printf.c
Corewar/printf/srcs/basic/: ft_getnbr_base.c  ft_itoa.c  ft_itoa_double.c  ft_print_memory.c  (+7 more)
Corewar/s/: log  long_comment.cor  long_comment.s  only_name.cor  pagny.cor  pagny.s  pagny0.cor  pagny0.s  pouny.cor  pouny.s  size_test.cor  tata  zork.s
Corewar/srcs_asm/: check_code.c  check_filedots.c  check_head.c  check_ins.c  check_ins2.c  errors.c  ft_label.c  ft_label2.c  ft_opdir.c  ins.c  ins2.c  ins3.c  ins4.c  ins5.c  ins6.c  ins7.c  ins8.c  loop.c  main.c  malloc_tabtab.c  put.c  utils.c  write.c
Corewar/srcs_vma/: exec_add.c  exec_aff.c  exec_and.c  exec_fork.c  exec_ld.c  exec_ldi.c  exec_lfork.c  exec_live.c  exec_lld.c  exec_lldi.c  exec_or.c  exec_st.c  exec_sti.c  exec_sub.c  exec_xor.c  exec_zjmp.c  vm_check_players.c  vm_create_players.c  vm_create_process.c  vm_debug.c  vm_destroy_process.c  vm_display_arena.c  vm_display_errors.c  vm_display_messages.c  vm_display_options.c  vm_exec_functions.c  vm_exec_functions_2.c  vm_exec_instructions.c  vm_exec_process.c  vm_initialization.c  vm_instructions_size.c  vm_load_players.c  vm_main.c  vm_options.c  vm_options_2.c  vm_visu_0.c  vm_visu_1.c
Corewar/tests/: .build_champs.sh.swp  build_champs.sh  wrong.sh
Corewar/tests/champs/: Car.s  Octobre_Rouge_V4.2.s  big_life.cor  big_life.s  ex.cor  ex.s  fat_42.cor  fat_42.s  seg.cor  seg.s  while_fork.cor  while_fork.s
Corewar/tests/wrong_asm/: COMMENT_TOO_LONG.s  NAME_TOO_LONG.s  Octobre_Rouge_Toolong.s  POUNY_WRONG_INSTRUCTION_1.s  POUNY_WRONG_INSTRUCTION_10.s  POUNY_WRONG_INSTRUCTION_11.s  POUNY_WRONG_INSTRUCTION_12.s  POUNY_WRONG_INSTRUCTION_13.s  POUNY_WRONG_INSTRUCTION_14.s  POUNY_WRONG_INSTRUCTION_15.s  POUNY_WRONG_INSTRUCTION_16.s  POUNY_WRONG_INSTRUCTION_2.s  POUNY_WRONG_INSTRUCTION_3.s  POUNY_WRONG_INSTRUCTION_4.s  POUNY_WRONG_INSTRUCTION_5.s  POUNY_WRONG_INSTRUCTION_6.s  POUNY_WRONG_INSTRUCTION_7.s  POUNY_WRONG_INSTRUCTION_8.s  POUNY_WRONG_INSTRUCTION_9.s  POUNY_WRONG_LABEL_1.s  POUNY_WRONG_LABEL_10.s  POUNY_WRONG_LABEL_2.s  POUNY_WRONG_LABEL_3.s  POUNY_WRONG_LABEL_4.s  POUNY_WRONG_LABEL_5.s  POUNY_WRONG_LABEL_6.s  POUNY_WRONG_LABEL_7.s  POUNY_WRONG_LABEL_8.s  POUNY_WRONG_LABEL_9.s  POUNY_WRONG_NBR_1.s  POUNY_WRONG_NBR_10.s  POUNY_WRONG_NBR_11.s  POUNY_WRONG_NBR_12.s  POUNY_WRONG_NBR_13.s  POUNY_WRONG_NBR_14.s  POUNY_WRONG_NBR_15.s  POUNY_WRONG_NBR_16.s  POUNY_WRONG_NBR_17.s  POUNY_WRONG_NBR_2.s  POUNY_WRONG_NBR_3.s  (+8 more)
Lemin/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  auteur  lem-in  lem_in  map2  test.sh
Lemin/free_all/: Makefile
Lemin/include/: lemin.h  my_h.h
Lemin/include/lemin/: gui.h  lemin.h  parser.h  solve.h  vertex.h
Lemin/lem_in/includes/: get_next_line.h  lemin.h  line.h  move.h  node.h
Lemin/lem_in/srcs/: input.c  input.d  line.c  line.d  list_op.c  list_op2.c  main.c  main.d  move1.c  move1.d  move2.c  move2.d  neighbor.c  neighbor.d  node.c  node.d  parcour.c  parsing.c  parsing.d  pathfinding.c  pathfinding.d  rank.c  tell_me.c  tool.c  tool2.c
Lemin/libft/: Makefile  ft_atoi.c  ft_isprint.c  ft_strchr.c  ft_strjoin.c  ft_strlen.c  ft_strncat.c  ft_strsplit.c  libft.h
Lemin/libft/src/: gnl.c
Lemin/map/: map3  subjectmap2
Lemin/src/: get_next_line.h  getnextline.c  gui.c  lemin.c  list_op.c  list_op2.c  main.c  my_str_to_wordtab.c  parcour.c  parser.c  parsing.c  rank.c  solve.c  tell_me.c  tool.c  tool2.c  utils.c  vertex.c
(+763 files in other folders)
