cmake_minimum_required(VERSION 3.9)
project(Final)

set(CMAKE_CXX_STANDARD 11)

add_executable(Final
        includes/arena.h
        includes/asm.h
        includes/op.h
        includes/vm.h
        LIBFT/ft_atoi.c
        LIBFT/ft_bzero.c
        LIBFT/ft_countspace.c
        LIBFT/ft_intlimit.c
        LIBFT/ft_intlistsorted.c
        LIBFT/ft_intmaxmin.c
        LIBFT/ft_is_negative.c
        LIBFT/ft_isalnum.c
        LIBFT/ft_isalpha.c
        LIBFT/ft_isascii.c
        LIBFT/ft_isdigit.c
        LIBFT/ft_isnum.c
        LIBFT/ft_isprint.c
        LIBFT/ft_itoa.c
        LIBFT/ft_lstadd.c
        LIBFT/ft_lstdel.c
        LIBFT/ft_lstdelone.c
        LIBFT/ft_lstiter.c
        LIBFT/ft_lstmap.c
        LIBFT/ft_lstnew.c
        LIBFT/ft_memalloc.c
        LIBFT/ft_memccpy.c
        LIBFT/ft_memchr.c
        LIBFT/ft_memcmp.c
        LIBFT/ft_memcpy.c
        LIBFT/ft_memdel.c
        LIBFT/ft_memmove.c
        LIBFT/ft_memset.c
        LIBFT/ft_placeint.c
        LIBFT/ft_print_words_tables.c
        LIBFT/ft_printint.c
        LIBFT/ft_putchar.c
        LIBFT/ft_putchar_fd.c
        LIBFT/ft_putendl.c
        LIBFT/ft_putendl_fd.c
        LIBFT/ft_putnbr.c
        LIBFT/ft_putnbr_base.c
        LIBFT/ft_putnbr_fd.c
        LIBFT/ft_putsterr.c
        LIBFT/ft_putstr.c
        LIBFT/ft_putstr_fd.c
        LIBFT/ft_range.c
        LIBFT/ft_revint.c
        LIBFT/ft_sqrt.c
        LIBFT/ft_strcat.c
        LIBFT/ft_strchr.c
        LIBFT/ft_strclr.c
        LIBFT/ft_strcmp.c
        LIBFT/ft_strcpy.c
        LIBFT/ft_strdel.c
        LIBFT/ft_strdup.c
        LIBFT/ft_strequ.c
        LIBFT/ft_striter.c
        LIBFT/ft_striteri.c
        LIBFT/ft_strjoin.c
        LIBFT/ft_strlcat.c
        LIBFT/ft_strlen.c
        LIBFT/ft_strmap.c
        LIBFT/ft_strmapi.c
        LIBFT/ft_strncat.c
        LIBFT/ft_strncmp.c
        LIBFT/ft_strncpy.c
        LIBFT/ft_strnequ.c
        LIBFT/ft_strnew.c
        LIBFT/ft_strnstr.c
        LIBFT/ft_strrchr.c
        LIBFT/ft_strrev.c
        LIBFT/ft_strstr.c
        LIBFT/ft_strsub.c
        LIBFT/ft_strtrim.c
        LIBFT/ft_swap.c
        LIBFT/ft_tolower.c
        LIBFT/ft_toupper.c
        LIBFT/int_len.c
        LIBFT/libft.h
        printf/include/ft_printf.h
        printf/srcs/basic/free_all.c
        printf/srcs/basic/ft_atoi.c
        printf/srcs/basic/ft_getnbr_base.c
        printf/srcs/basic/ft_getnbr_base_ui.c
        printf/srcs/basic/ft_itoa.c
        printf/srcs/basic/ft_itoa_double.c
        printf/srcs/basic/ft_print_bits.c
        printf/srcs/basic/ft_print_memory.c
        printf/srcs/basic/ft_printf_strlen.c
        printf/srcs/basic/ft_printtab.c
        printf/srcs/basic/ft_putchar.c
        printf/srcs/basic/ft_putdouble.c
        printf/srcs/basic/ft_putint.c
        printf/srcs/basic/ft_putlong.c
        printf/srcs/basic/ft_putnbr_base.c
        printf/srcs/basic/ft_putshort.c
        printf/srcs/basic/ft_putstr.c
        printf/srcs/basic/ft_putuint.c
        printf/srcs/basic/ft_strcat.c
        printf/srcs/basic/ft_strchr.c
        printf/srcs/basic/ft_strdup.c
        printf/srcs/basic/ft_strncat.c
        printf/srcs/basic/ft_strnew.c
        printf/srcs/basic/ft_strrev.c
        printf/srcs/basic/int_len.c
        printf/srcs/basic/larg_flag.c
        printf/srcs/basic/lenght_modif.c
        printf/srcs/letters/a.c
        printf/srcs/letters/b.c
        printf/srcs/letters/c.c
        printf/srcs/letters/d.c
        printf/srcs/letters/e.c
        printf/srcs/letters/f.c
        printf/srcs/letters/g.c
        printf/srcs/letters/h.c
        printf/srcs/letters/i.c
        printf/srcs/letters/j.c
        printf/srcs/letters/k.c
        printf/srcs/letters/l.c
        printf/srcs/letters/m.c
        printf/srcs/letters/n.c
        printf/srcs/letters/o.c
        printf/srcs/letters/p.c
        printf/srcs/letters/q.c
        printf/srcs/letters/r.c
        printf/srcs/letters/s.c
        printf/srcs/letters/t.c
        printf/srcs/letters/u.c
        printf/srcs/letters/v.c
        printf/srcs/letters/w.c
        printf/srcs/letters/x.c
        printf/srcs/letters/y.c
        printf/srcs/letters/z.c
        printf/srcs/ft_printf.c
        SRCS_ASM/check_code.c
        SRCS_ASM/check_filedots.c
        SRCS_ASM/check_head.c
        SRCS_ASM/check_ins.c
        SRCS_ASM/check_ins2.c
        SRCS_ASM/errors.c
        SRCS_ASM/ft_label.c
        SRCS_ASM/ft_label2.c
        SRCS_ASM/ft_opdir.c
        SRCS_ASM/ins.c
        SRCS_ASM/ins2.c
        SRCS_ASM/ins3.c
        SRCS_ASM/ins4.c
        SRCS_ASM/ins5.c
        SRCS_ASM/ins6.c
        SRCS_ASM/ins7.c
        SRCS_ASM/ins8.c
        SRCS_ASM/main.c
        SRCS_ASM/utils.c
        SRCS_ASM/write.c
        SRCS_VM/arena.c
        SRCS_VM/inner_parser.c
        SRCS_VM/main.c
        SRCS_VM/outer_parser.c
        SRCS_VM/player_builder.c
        SRCS_VM/player_builder_set_number.c
        SRCS_VM/utils.c
        SRCS_VM/utils2.c)
